--- a/reference.bib
+++ b/reference.bib
@@ -396,3 +396,72 @@
   year={2004},
   publisher={JMLR. org}
 }
+
+
+@incollection{li2011actions,
+  title={Actions in Still Web Images: Visualization, Detection and Retrieval},
+  author={Li, Piji and Ma, Jun and Gao, Shuai},
+  booktitle={Web-Age Information Management},
+  pages={302--313},
+  year={2011},
+  publisher={Springer}
+}
+
+@inproceedings{loui2007kodak,
+  title={Kodak's consumer video benchmark data set: concept definition and annotation},
+  author={Loui, Alexander and Luo, Jiebo and Chang, Shih-Fu and Ellis, Dan and Jiang, Wei and Kennedy, Lyndon and Lee, Keansub and Yanagawa, Akira},
+  booktitle={Proceedings of the international workshop on Workshop on multimedia information retrieval},
+  pages={245--254},
+  year={2007},
+  organization={ACM}
+}
+
+@article{laptev2005space,
+  title={On space-time interest points},
+  author={Laptev, Ivan},
+  journal={International Journal of Computer Vision},
+  volume={64},
+  number={2-3},
+  pages={107--123},
+  year={2005},
+  publisher={Springer}
+}
+
+@incollection{baillie2003audio,
+  title={Audio-based event detection for sports video},
+  author={Baillie, Mark and Jose, Joemon M},
+  booktitle={Image and Video Retrieval},
+  pages={300--309},
+  year={2003},
+  publisher={Springer}
+}
+
+@inproceedings{sivic2003video,
+  title={Video Google: A text retrieval approach to object matching in videos},
+  author={Sivic, Josef and Zisserman, Andrew},
+  booktitle={Computer Vision, 2003. Proceedings. Ninth IEEE International Conference on},
+  pages={1470--1477},
+  year={2003},
+  organization={IEEE}
+}
+
+@inproceedings{xie2002structure,
+  title={Structure analysis of soccer video with hidden Markov models},
+  author={Xie, Lexing and Chang, Shih-Fu and Divakaran, Ajay and Sun, Huifang},
+  booktitle={Acoustics, Speech, and Signal Processing (ICASSP), 2002 IEEE International Conference on},
+  volume={4},
+  pages={IV--4096},
+  year={2002},
+  organization={IEEE}
+}
+
+@article{huang2006semantic,
+  title={Semantic analysis of soccer video using dynamic Bayesian network},
+  author={Huang, Chung-Lin and Shih, Huang-Chia and Chao, Chung-Yuan},
+  journal={Multimedia, IEEE Transactions on},
+  volume={8},
+  number={4},
+  pages={749--760},
+  year={2006},
+  publisher={IEEE}
+}
