--- a/report.tex
+++ b/report.tex
@@ -56,7 +56,7 @@
 
 \definecolor{dkgreen}{rgb}{0,0.6,0}
 \definecolor{gray}{rgb}{0.5,0.5,0.5}
-\definecolor{mauve}{rgb}{0.58,0,0.82}
+\definecolor{mauve} {rgb}{0.58,0,0.82}
 \lstset{frame=tb,
   language=Java,
   aboveskip=3mm,
@@ -80,16 +80,30 @@
 % \usepackage[font={it}]{caption}
 
 \begin{document}
-% \tableofcontents
+\include{cover}
+
 \newpage
-% \include{introduction}
-% \include{literature}
-% \include{imageRec}
-% \include{videoRec}
-% \include{domainAdaption}
+
+\include{abstract}
+\include{ack}
+
+\tableofcontents
+\newpage
+
+\listoftables
+\newpage
+
+\listoffigures
+\newpage
+
+\include{introduction}
+\include{literature}
+\include{imageRec}
+\include{videoRec}
+\include{domainAdaption}
 \include{experiments}
-% \include{webDemo}
-% \include{conclusion}
+\include{webDemo}
+\include{conclusion}
 
 \newpage
 \bibliographystyle{IEEEtranS}
