--- a/domainAdaption.tex
+++ b/domainAdaption.tex
@@ -75,7 +75,7 @@ DIST_k^2(\mathcal{D}^A, \mathcal{D}^T) = \text{tr}(\mathbf{KS})
 \end{equation}
 where $\mathbf{S = s s^T }$, and $\mathbf{K = \begin{bmatrix} K^{A,A} & K^{A,T} \\ K^{T, A} & K^{T,T}\\  \end{bmatrix}}$, and $K^{A,A}$, $K^{T,T}$ and $K^{A, T}$ are kernel matrices defined for auxiliary domain, target domain and the cross domain for the auxiliary domain to target domain.\\ 
 
-\noindent According to traditional multiple kernel learning assumptin \cite{lanckriet2004learning}, the final kernel $k$ is a result of linear combination of several base kernels $k_1, \cdots, k_M$.
+\noindent According to traditional multiple kernel learning assumption \cite{lanckriet2004learning}, the final kernel $k$ is a result of linear combination of several base kernels $k_1, \cdots, k_M$.
 \begin{equation}
 k = \sum_{m=1}^{M}d_m k_m
 \end{equation}
